added validation to location model + validation error messages + test

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,4 +2,14 @@
 # See https://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 en:
-  hello: "Hello world"
+  activerecord:
+    errors:
+      models:
+        location:
+          attributes:
+            latitude:
+              less_than: &invalid "'%{value}' is invalid"
+              greater_than: *invalid
+            longitude:
+              less_than: *invalid
+              greater_than: *invalid
