--- a/README.rdoc
+++ b/README.rdoc
@@ -6,19 +6,19 @@ Read up on Rails documentation: http://guides.rubyonrails.org/
 == Getting Started
 
 1. Clone the repository:
-`$ git clone git@github.com:brogrammers/eventhub-api.git`
+    $ git clone git@github.com:brogrammers/eventhub-api.git
 
 2. Make sure you are running RVM Ruby 1.9.3p194:
-`$ rvm use 1.9.3p194`
+    $ rvm use 1.9.3p194
 
 3. Run bundler to resolve all the dependencies:
-`$ bundle install`
+    $ bundle install
 
 4. Run a Database migration:
-`$ rake db:migrate`
+    $ rake db:migrate
 
 5. Finally start the server in development mode
-`$ rails server -e development`
+    $ rails server -e development
 
 == Tests
 
