--- a/README.rdoc
+++ b/README.rdoc
@@ -8,8 +8,8 @@ Read up on Rails documentation: http://guides.rubyonrails.org/
 1. Clone the repository:
     $ git clone git@github.com:brogrammers/eventhub-api.git
 
-2. Make sure you are running RVM Ruby 1.9.3p194:
-    $ rvm use 1.9.3p194
+2. Make sure you are in the root directory:
+    $ cd eventhub-api
 
 3. Run bundler to resolve all the dependencies:
     $ bundle install
@@ -25,6 +25,6 @@ Read up on Rails documentation: http://guides.rubyonrails.org/
 We try to ensure that every line of code is tested efficiently, so make sure to supply tests.
 
 run the existing tests with:
-`$ rspec`
+    $ rspec
 or via rake
-`$ rake spec`
+    $ rake spec
