--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,7 @@
 == Eventhub API
 
+{<img src="http://ci.eventhub.eu:8081/job/Eventhub-Api/badge/icon" />}[http://ci.eventhub.com/job/Eventhub-Api/]
+
 The Eventhub API is running on Ruby on Rails.
 Read up on Rails documentation: http://guides.rubyonrails.org/
 
